RESOLVED FIXED134152
Commit queue has been failing due to a build failure in WKFoundation.h
https://bugs.webkit.org/show_bug.cgi?id=134152
Summary Commit queue has been failing due to a build failure in WKFoundation.h
Ryosuke Niwa
Reported 2014-06-20 23:43:43 PDT
Commit queue has been failing due to a build failure in WKFoundation.h
Attachments
Fix CQ build failure (1.42 KB, patch)
2014-06-20 23:48 PDT, Ryosuke Niwa
no flags
Fixed per Dan's comment (1.45 KB, patch)
2014-06-21 00:36 PDT, Ryosuke Niwa
no flags
Use if instead of ifdef (1.45 KB, patch)
2014-06-21 00:36 PDT, Ryosuke Niwa
no flags
Ryosuke Niwa
Comment 1 2014-06-20 23:48:08 PDT
Created attachment 233513 [details] Fix CQ build failure
Ryosuke Niwa
Comment 2 2014-06-21 00:11:50 PDT
Comment on attachment 233513 [details] Fix CQ build failure View in context: https://bugs.webkit.org/attachment.cgi?id=233513&action=review > Source/WebKit2/ChangeLog:12 > + The availability of this type depends on the version of SDK, > + not the target operating system. The enum is defined using NS_ENUM_AVAILABLE, which in turn uses CF_AVAILABLE: #define CF_AVAILABLE(_mac, _ios) __attribute__((availability(macosx,__NSi_##_mac))) http://opensource.apple.com/source/CF/CF-855.11/CFAvailability.h Enum types defined with by the attribute seems to still exist as a type so re-defining it results in a compilation error.
mitz
Comment 3 2014-06-21 00:20:58 PDT
Comment on attachment 233513 [details] Fix CQ build failure I think that if you want to check the SDK version, you should check if __MAC_OS_X_VERSION_MAX_ALLOWED is defined and is less than 1090.
Ryosuke Niwa
Comment 4 2014-06-21 00:36:21 PDT
Created attachment 233514 [details] Fixed per Dan's comment
Ryosuke Niwa
Comment 5 2014-06-21 00:36:55 PDT
Created attachment 233515 [details] Use if instead of ifdef
Csaba Osztrogonác
Comment 6 2014-06-21 01:42:03 PDT
Comment on attachment 233515 [details] Use if instead of ifdef rs=me to unbreak CQ ASAP. Let's see if CQ can land this fix. :)
Brady Eidson
Comment 7 2014-06-21 07:38:11 PDT
Okay, it's kind of comedic that we're trying to let the commit queue land this, don't you think? =/
Brady Eidson
Comment 8 2014-06-21 07:44:19 PDT
Csaba Osztrogonác
Comment 9 2014-06-23 00:53:10 PDT
(In reply to comment #7) > Okay, it's kind of comedic that we're trying to let the commit queue land this, don't you think? =/ Not at all. Commit queue should handle this situation. When the build is broken, CQ can rollout the revision which caused the build breakage. But after a little bit digging, rollout patches are handled specifically, they aren't built and tested at all. Maybe we should teach CQ how to handle quick and important fixes which aren't rollout patches.
Csaba Osztrogonác
Comment 10 2014-06-23 01:01:07 PDT
Comment on attachment 233515 [details] Use if instead of ifdef removing flags, it was already landed
Note You need to log in before you can comment on or make changes to this bug.