Commit queue has been failing due to a build failure in WKFoundation.h https://bugs.webkit.org/show_bug.cgi?id=134152

Patch by Ryosuke Niwa <rniwa@webkit.org> on 2014-06-21
Reviewed by Csaba Osztrogonác.
Landed by Brady Eidson.

The build failure was caused by WKFoundation.h erroneously redefining
NSURLSessionAuthChallengeDisposition even when building with 10.9 SDK.

The availability of this type depends on the version of SDK,
not the target operating system.

* Shared/API/Cocoa/WKFoundation.h:

Canonical link: https://commits.webkit.org/152098@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170237 268f45cc-cd09-0410-ab3c-d52691b4dbfc