Source/WebKit2/Shared/API/Cocoa/WKFoundation.h
@@ -54,7 +54,7 @@
 #import <Foundation/Foundation.h>
 typedef NSUInteger NSEventModifierFlags;
 
-#if __MAC_OS_X_VERSION_MIN_REQUIRED < 1090
+#if __MAC_OS_X_VERSION_MAX_ALLOWED < 1090
 typedef NSInteger NSURLSessionAuthChallengeDisposition;
 #endif
 
